--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,6 +30,7 @@ html , body {
   font-feature-settings: "kern";
   font-kerning: normal;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 
   /* Ligatures */
   -webkit-font-variant-ligatures: common-ligatures;
